--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,3 +6,6 @@ include ./theme.conf
 ## adjust font size 
 font_size 12.0
 
+map ctrl+shift+c copy_to_clipboard
+map ctrl+shift+p paste_from_selection
+
